[package]
authors = ["Kenta IDA"]
name = "rust_main"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
idf = { path = "./idf" }
freertos_rs = { path = "../../../freertos.rs" }
peripheral = { path = "./peripheral" }
libc = { version = "0.2.0", default-features = false }
rand = { version = "0.6", default-features = false }
embedded-hal = { version = "0.2" }
m5stack = { path = "./m5stack" }
embedded-graphics = {version="0.5.0", default-features=false}

[build-dependencies]
bindgen = "0.49.2"
walkdir = "2"


[profile.dev]
lto = true 
incremental = false
debug = false
codegen-units = 1

[profile.release]
lto = true
incremental = false
debug = false
codegen-units = 1