[package]
authors = ["Kenta IDA"]
name = "m5stack"
version = "0.1.0"
edition = "2018"

[dependencies]
idf = {path = "../idf"}
freertos_rs = {path = "../../../../freertos.rs"}
peripheral = {path = "../peripheral"}
embedded-hal = {version="0.2.3", features=["unproven"]}
ili9341 = {path = "../ili9341", features=["embedded-graphics"]}
embedded-graphics = {version="0.5.0", default-features=false}

[profile.dev]
lto = true 
incremental = false
debug = false
codegen-units = 1

[profile.release]
lto = true
incremental = false
debug = false
codegen-units = 1   